fonts and save_folder

--- a/lorentz-attractor-animate.ipynb
+++ b/lorentz-attractor-animate.ipynb
@@ -13,6 +13,28 @@
     "from mpl_toolkits.mplot3d.axes3d import Axes3D\n",
     "from PIL import Image"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the fonts to use for plots\n",
+    "family = 'Myriad Pro'\n",
+    "title_font = fm.FontProperties(family=family, style='normal', size=20, weight='normal', stretch='normal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_folder = 'images/lorenz-animate'\n",
+    "if not os.path.exists(save_folder):\n",
+    "    os.makedirs(save_folder)"
+   ]
   }
  ],
  "metadata": {
