define initial state and parameters

--- a/lorentz-attractor-animate.ipynb
+++ b/lorentz-attractor-animate.ipynb
@@ -35,6 +35,27 @@
     "if not os.path.exists(save_folder):\n",
     "    os.makedirs(save_folder)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the initial system state (aka x, y, z positions in space)\n",
+    "initial_state = [0.1, 0, 0]\n",
+    "\n",
+    "# define the system parameters sigma, rho, and beta\n",
+    "sigma = 10.\n",
+    "rho   = 28.\n",
+    "beta  = 8./3.\n",
+    "\n",
+    "# define the time points to solve for, evenly spaced between the start and end times\n",
+    "start_time = 1\n",
+    "end_time = 60\n",
+    "interval = 100\n",
+    "time_points = np.linspace(start_time, end_time, end_time * interval)"
+   ]
   }
  ],
  "metadata": {
