define the lorentz system

--- a/lorentz-attractor-animate.ipynb
+++ b/lorentz-attractor-animate.ipynb
@@ -56,6 +56,21 @@
     "interval = 100\n",
     "time_points = np.linspace(start_time, end_time, end_time * interval)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the lorenz system\n",
+    "def lorenz_system(current_state, t):\n",
+    "    x, y, z = current_state\n",
+    "    dx_dt = sigma * (y - x)\n",
+    "    dy_dt = x * (rho - z) - y\n",
+    "    dz_dt = x * y - beta * z\n",
+    "    return [dx_dt, dy_dt, dz_dt]"
+   ]
   }
  ],
  "metadata": {
