plot the lorentz system in 3 dimensions

--- a/lorentz-attractor-animate.ipynb
+++ b/lorentz-attractor-animate.ipynb
@@ -71,6 +71,36 @@
     "    dz_dt = x * y - beta * z\n",
     "    return [dx_dt, dy_dt, dz_dt]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the system in 3 dimensions\n",
+    "def plot_lorenz(xyz, n):\n",
+    "    fig = plt.figure(figsize=(12, 9))\n",
+    "    ax = fig.gca(projection='3d')\n",
+    "    \n",
+    "    ax.xaxis.set_pane_color((1, 1, 1, 1))\n",
+    "    ax.yaxis.set_pane_color((1, 1, 1, 1))\n",
+    "    ax.zaxis.set_pane_color((1, 1, 1, 1))\n",
+    "    \n",
+    "    x = xyz[:, 0]\n",
+    "    y = xyz[:, 1]\n",
+    "    z = xyz[:, 2]\n",
+    "    \n",
+    "    ax.plot(x, y, z, color='g', alpha=0.7, linewidth=0.7)\n",
+    "    ax.set_xlim((-30, 30))\n",
+    "    ax.set_ylim((-30, 30))\n",
+    "    ax.set_zlim((0, 50))\n",
+    "    ax.set_title('Lorenz system attractor', fontproperties=title_font)\n",
+    "    \n",
+    "    ## save png of the plot\n",
+    "    plt.savefig('{}/{:03d}.png'.format(save_folder, n), dpi=60, bbox_inches='tight', pad_inches=0.1)\n",
+    "    plt.close()"
+   ]
   }
  ],
  "metadata": {
