list return and minor changes

--- a/lorentz-attractor-animate.ipynb
+++ b/lorentz-attractor-animate.ipynb
@@ -58,6 +58,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Lorenz System:\n",
+    "$$\n",
+    "\\frac{{dx}}{{dt}} = \\sigma(y - x) \\\\\n",
+    "\\frac{{dy}}{{dt}} = x(\\rho - z) - y \\\\\n",
+    "\\frac{{dz}}{{dt}} = xy - \\beta z \\\\\n",
+    "$$\n",
+    "\n",
+    "where x is proportional to the rate of convection, y to the horizontal temperature variation, and z to the vertical temperature variation. The constants σ, ρ, and β are system parameters proportional to the Prandtl number, Rayleigh number, and certain physical dimensions of the layer itself."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -100,6 +114,19 @@
     "    ## save png of the plot\n",
     "    plt.savefig('{}/{:03d}.png'.format(save_folder, n), dpi=60, bbox_inches='tight', pad_inches=0.1)\n",
     "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# return a list in iteratively larger chunks\n",
+    "def get_chunks(full_list, size):\n",
+    "    size = max(1, size)\n",
+    "    chunks = [full_list[0:i] for i in range(1, len(full_list) + 1, size)]\n",
+    "    return chunks"
    ]
   }
  ],
