plotting and minor changes

--- a/lorenz-attractor-animate.ipynb
+++ b/lorenz-attractor-animate.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Animate the Lorenz Attractor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -127,6 +134,37 @@
     "    size = max(1, size)\n",
     "    chunks = [full_list[0:i] for i in range(1, len(full_list) + 1, size)]\n",
     "    return chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get incrementally larger chunks of the time points, to reveal the attractor one frame at a time\n",
+    "chunks = get_chunks(time_points, size=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the points to plot, one chunk of time steps at a time, by integrating the system of equations\n",
+    "points = [odeint(lorenz_system, initial_state, chunk) for chunk in chunks]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot each set of points, one at a time, saving each plot\n",
+    "for n, point in enumerate(points):\n",
+    "    plot_lorenz(point, n)"
    ]
   }
  ],
