--- a/lorenz-attractor-animate.ipynb
+++ b/lorenz-attractor-animate.ipynb
@@ -166,6 +166,37 @@
     "for n, point in enumerate(points):\n",
     "    plot_lorenz(point, n)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Animate it\n",
+    "Here we will create an animated gif of all the plots then display it inline!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a tuple of display durations, one for each frame\n",
+    "first_last = 100 #show the first and last frames for 100 ms\n",
+    "standard_duration = 5 #show all other frames for 5 ms\n",
+    "durations = tuple([first_last] + [standard_duration] * (len(points) - 2) + [first_last])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load all the static images into a list\n",
+    "images = [Image.open(image) for image in glob.glob('{}/*.png'.format(save_folder))]\n",
+    "gif_filepath = 'images/animated-lorenz-attractor.gif'"
+   ]
   }
  ],
  "metadata": {
