save gif + verification

--- a/lorenz-attractor-animate.ipynb
+++ b/lorenz-attractor-animate.ipynb
@@ -197,6 +197,38 @@
     "images = [Image.open(image) for image in glob.glob('{}/*.png'.format(save_folder))]\n",
     "gif_filepath = 'images/animated-lorenz-attractor.gif'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save as an animated gif\n",
+    "gif = images[0]\n",
+    "gif.info['duration'] = durations #ms per frame\n",
+    "gif.info['loop'] = 0 #how many times to loop (0=infinite)\n",
+    "gif.save(fp=gif_filepath, format='gif', save_all=True, append_images=images[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# verify that the number of frames in the gif equals the number of image files and durations\n",
+    "Image.open(gif_filepath).n_frames == len(images) == len(durations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IPdisplay.Image(url=gif_filepath)"
+   ]
   }
  ],
  "metadata": {
