save_folder stuff

--- a/lorenz-attractor-visualizer.ipynb
+++ b/lorenz-attractor-visualizer.ipynb
@@ -21,6 +21,24 @@
     "font_family = 'Myriad Pro'\n",
     "title_font = fm.FontProperties(family=font_family, style='normal', size=20, weight='normal', stretch='normal')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_folder = 'images'\n",
+    "if not os.path.exists(save_folder):\n",
+    "    os.makedirs(save_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
