--- a/lorenz-attractor-visualizer.ipynb
+++ b/lorenz-attractor-visualizer.ipynb
@@ -38,7 +38,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# define the initial system state (aka x, y, z positions in space)\n",
+    "initial_state = [0.1, 0, 0]\n",
+    "\n",
+    "# define the system parameters sigma, rho, and beta\n",
+    "sigma = 10.\n",
+    "rho   = 28.\n",
+    "beta  = 8./3.\n",
+    "\n",
+    "# define the time points to solve for, evenly spaced between the start and end times\n",
+    "start_time = 0\n",
+    "end_time = 100\n",
+    "time_points = np.linspace(start_time, end_time, end_time*100)"
+   ]
   }
  ],
  "metadata": {
