define the lorenz system

--- a/lorenz-attractor-visualizer.ipynb
+++ b/lorenz-attractor-visualizer.ipynb
@@ -52,6 +52,28 @@
     "end_time = 100\n",
     "time_points = np.linspace(start_time, end_time, end_time*100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the lorenz system\n",
+    "# x, y, and z make up the system state, t is time, and sigma, rho, beta are the system parameters\n",
+    "def lorenz_system(current_state, t):\n",
+    "    \n",
+    "    # positions of x, y, z in space at the current time point\n",
+    "    x, y, z = current_state\n",
+    "    \n",
+    "    # define the 3 ordinary differential equations known as the lorenz equations\n",
+    "    dx_dt = sigma * (y - x)\n",
+    "    dy_dt = x * (rho - z) - y\n",
+    "    dz_dt = x * y - beta * z\n",
+    "    \n",
+    "    # return a list of the equations that describe the system\n",
+    "    return [dx_dt, dy_dt, dz_dt]"
+   ]
   }
  ],
  "metadata": {
