solving the system of ODEs

--- a/lorenz-attractor-visualizer.ipynb
+++ b/lorenz-attractor-visualizer.ipynb
@@ -74,6 +74,26 @@
     "    # return a list of the equations that describe the system\n",
     "    return [dx_dt, dy_dt, dz_dt]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use odeint() to solve a system of ordinary differential equations\n",
+    "# the arguments are: \n",
+    "# 1, a function - computes the derivatives\n",
+    "# 2, a vector of initial system conditions (aka x, y, z positions in space)\n",
+    "# 3, a sequence of time points to solve for\n",
+    "# returns an array of x, y, and z value arrays for each time point, with the initial values in the first row\n",
+    "xyz = odeint(lorenz_system, initial_state, time_points)\n",
+    "\n",
+    "# extract the individual arrays of x, y, and z values from the array of arrays\n",
+    "x = xyz[:, 0]\n",
+    "y = xyz[:, 1]\n",
+    "z = xyz[:, 2]"
+   ]
   }
  ],
  "metadata": {
