plot the 3-dimensional phase diagram

--- a/lorenz-attractor-visualizer.ipynb
+++ b/lorenz-attractor-visualizer.ipynb
@@ -94,6 +94,25 @@
     "y = xyz[:, 1]\n",
     "z = xyz[:, 2]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the lorenz attractor in three-dimensional phase space\n",
+    "fig = plt.figure(figsize=(12, 9))\n",
+    "ax = fig.gca(projection='3d')\n",
+    "ax.xaxis.set_pane_color((1,1,1,1))\n",
+    "ax.yaxis.set_pane_color((1,1,1,1))\n",
+    "ax.zaxis.set_pane_color((1,1,1,1))\n",
+    "ax.plot(x, y, z, color='g', alpha=0.7, linewidth=0.6)\n",
+    "ax.set_title('Lorenz attractor phase diagram', fontproperties=title_font)\n",
+    "\n",
+    "fig.savefig('{}/lorenz-attractor-3d.png'.format(save_folder), dpi=180, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
