--- a/lorenz-attractor-visualizer.ipynb
+++ b/lorenz-attractor-visualizer.ipynb
@@ -113,6 +113,31 @@
     "fig.savefig('{}/lorenz-attractor-3d.png'.format(save_folder), dpi=180, bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now plot two-dimensional cuts of the three-dimensional phase space\n",
+    "fig, ax = plt.subplots(1, 3, sharex=False, sharey=False, figsize=(17, 6))\n",
+    "\n",
+    "# plot the x values vs the y values\n",
+    "ax[0].plot(x, y, color='r', alpha=0.7, linewidth=0.3)\n",
+    "ax[0].set_title('x-y phase plane', fontproperties=title_font)\n",
+    "\n",
+    "# plot the x values vs the z values\n",
+    "ax[1].plot(x, z, color='m', alpha=0.7, linewidth=0.3)\n",
+    "ax[1].set_title('x-z phase plane', fontproperties=title_font)\n",
+    "\n",
+    "# plot the y values vs the z values\n",
+    "ax[2].plot(y, z, color='b', alpha=0.7, linewidth=0.3)\n",
+    "ax[2].set_title('y-z phase plane', fontproperties=title_font)\n",
+    "\n",
+    "fig.savefig('{}/lorenz-attractor-phase-plane.png'.format(save_folder), dpi=180, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
