new systems and new points

--- a/lorenz-attractor-animate.ipynb
+++ b/lorenz-attractor-animate.ipynb
@@ -84,7 +84,23 @@
    "outputs": [],
    "source": [
     "# define the lorenz system\n",
-    "def lorenz_system(current_state, t):\n",
+    "def lorenz_system1(current_state, t):\n",
+    "    x, y, z = current_state\n",
+    "    dx_dt = sigma * (y - x)\n",
+    "    dy_dt = x * (rho - z) - y\n",
+    "    dz_dt = x * y - beta * z\n",
+    "    return [dx_dt, dy_dt, dz_dt]\\\n",
+    "\n",
+    "# define the lorenz system\n",
+    "def lorenz_system2(current_state, t):\n",
+    "    x, y, z = current_state\n",
+    "    dx_dt = sigma * (y - x)\n",
+    "    dy_dt = x * (rho - z) - y\n",
+    "    dz_dt = x * y - beta * z\n",
+    "    return [dx_dt, dy_dt, dz_dt]\n",
+    "\n",
+    "# define the lorenz system\n",
+    "def lorenz_system3(current_state, t):\n",
     "    x, y, z = current_state\n",
     "    dx_dt = sigma * (y - x)\n",
     "    dy_dt = x * (rho - z) - y\n",
@@ -152,7 +168,10 @@
    "outputs": [],
    "source": [
     "# get the points to plot, one chunk of time steps at a time, by integrating the system of equations\n",
-    "points = [odeint(lorenz_system, initial_state, chunk) for chunk in chunks]"
+    "points1 = [odeint(lorenz_system1, initial_state, chunk) for chunk in chunks]\n",
+    "# plot each set of points, one at a time, saving each plot\n",
+    "for n, point in enumerate(points1):\n",
+    "    plot_lorenz(point, n)"
    ]
   },
   {
@@ -161,8 +180,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the points to plot, one chunk of time steps at a time, by integrating the system of equations\n",
+    "points2 = [odeint(lorenz_system2, initial_state, chunk) for chunk in chunks]\n",
     "# plot each set of points, one at a time, saving each plot\n",
-    "for n, point in enumerate(points):\n",
+    "for n, point in enumerate(points2):\n",
+    "    plot_lorenz(point, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the points to plot, one chunk of time steps at a time, by integrating the system of equations\n",
+    "points3 = [odeint(lorenz_system3, initial_state, chunk) for chunk in chunks]\n",
+    "# plot each set of points, one at a time, saving each plot\n",
+    "for n, point in enumerate(points3):\n",
     "    plot_lorenz(point, n)"
    ]
   },
@@ -199,27 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for /: 'tuple' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[43], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m gif\u001b[39m.\u001b[39minfo[\u001b[39m'\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m durations \u001b[39m#ms per frame\u001b[39;00m\n\u001b[0;32m      4\u001b[0m gif\u001b[39m.\u001b[39minfo[\u001b[39m'\u001b[39m\u001b[39mloop\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \u001b[39m#how many times to loop (0=infinite)\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m gif\u001b[39m.\u001b[39msave(fp\u001b[39m=\u001b[39mgif_filepath, \u001b[39mformat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mgif\u001b[39m\u001b[39m'\u001b[39m, save_all\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, append_images\u001b[39m=\u001b[39mimages[\u001b[39m1\u001b[39m:])\n",
-      "File \u001b[1;32mc:\\Users\\kibal\\anaconda3\\Lib\\site-packages\\PIL\\Image.py:2431\u001b[0m, in \u001b[0;36mImage.save\u001b[1;34m(self, fp, format, **params)\u001b[0m\n\u001b[0;32m   2428\u001b[0m         fp \u001b[39m=\u001b[39m builtins\u001b[39m.\u001b[39mopen(filename, \u001b[39m\"\u001b[39m\u001b[39mw+b\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   2430\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 2431\u001b[0m     save_handler(\u001b[39mself\u001b[39m, fp, filename)\n\u001b[0;32m   2432\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   2433\u001b[0m     \u001b[39mif\u001b[39;00m open_fp:\n",
-      "File \u001b[1;32mc:\\Users\\kibal\\anaconda3\\Lib\\site-packages\\PIL\\GifImagePlugin.py:658\u001b[0m, in \u001b[0;36m_save_all\u001b[1;34m(im, fp, filename)\u001b[0m\n\u001b[0;32m    657\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_save_all\u001b[39m(im, fp, filename):\n\u001b[1;32m--> 658\u001b[0m     _save(im, fp, filename, save_all\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\kibal\\anaconda3\\Lib\\site-packages\\PIL\\GifImagePlugin.py:669\u001b[0m, in \u001b[0;36m_save\u001b[1;34m(im, fp, filename, save_all)\u001b[0m\n\u001b[0;32m    666\u001b[0m     palette \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    667\u001b[0m     im\u001b[39m.\u001b[39mencoderinfo[\u001b[39m\"\u001b[39m\u001b[39moptimize\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m im\u001b[39m.\u001b[39mencoderinfo\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39moptimize\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m--> 669\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m save_all \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m _write_multiple_frames(im, fp, palette):\n\u001b[0;32m    670\u001b[0m     _write_single_frame(im, fp, palette)\n\u001b[0;32m    672\u001b[0m fp\u001b[39m.\u001b[39mwrite(\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m;\u001b[39m\u001b[39m\"\u001b[39m)  \u001b[39m# end of file\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\kibal\\anaconda3\\Lib\\site-packages\\PIL\\GifImagePlugin.py:648\u001b[0m, in \u001b[0;36m_write_multiple_frames\u001b[1;34m(im, fp, palette)\u001b[0m\n\u001b[0;32m    646\u001b[0m             im_frame \u001b[39m=\u001b[39m im_frame\u001b[39m.\u001b[39mcrop(frame_data[\u001b[39m\"\u001b[39m\u001b[39mbbox\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m    647\u001b[0m             offset \u001b[39m=\u001b[39m frame_data[\u001b[39m\"\u001b[39m\u001b[39mbbox\u001b[39m\u001b[39m\"\u001b[39m][:\u001b[39m2\u001b[39m]\n\u001b[1;32m--> 648\u001b[0m         _write_frame_data(fp, im_frame, offset, frame_data[\u001b[39m\"\u001b[39m\u001b[39mencoderinfo\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m    649\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    650\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m im\u001b[39m.\u001b[39mencoderinfo \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(\n\u001b[0;32m    651\u001b[0m     im\u001b[39m.\u001b[39mencoderinfo[\u001b[39m\"\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m\"\u001b[39m], (\u001b[39mlist\u001b[39m, \u001b[39mtuple\u001b[39m)\n\u001b[0;32m    652\u001b[0m ):\n\u001b[0;32m    653\u001b[0m     \u001b[39m# Since multiple frames will not be written, add together the frame durations\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\kibal\\anaconda3\\Lib\\site-packages\\PIL\\GifImagePlugin.py:981\u001b[0m, in \u001b[0;36m_write_frame_data\u001b[1;34m(fp, im_frame, offset, params)\u001b[0m\n\u001b[0;32m    978\u001b[0m im_frame\u001b[39m.\u001b[39mencoderinfo \u001b[39m=\u001b[39m params\n\u001b[0;32m    980\u001b[0m \u001b[39m# local image header\u001b[39;00m\n\u001b[1;32m--> 981\u001b[0m _write_local_header(fp, im_frame, offset, \u001b[39m0\u001b[39m)\n\u001b[0;32m    983\u001b[0m ImageFile\u001b[39m.\u001b[39m_save(\n\u001b[0;32m    984\u001b[0m     im_frame, fp, [(\u001b[39m\"\u001b[39m\u001b[39mgif\u001b[39m\u001b[39m\"\u001b[39m, (\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m) \u001b[39m+\u001b[39m im_frame\u001b[39m.\u001b[39msize, \u001b[39m0\u001b[39m, RAWMODE[im_frame\u001b[39m.\u001b[39mmode])]\n\u001b[0;32m    985\u001b[0m )\n\u001b[0;32m    987\u001b[0m fp\u001b[39m.\u001b[39mwrite(\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\0\u001b[39;00m\u001b[39m\"\u001b[39m)  \u001b[39m# end of image data\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\kibal\\anaconda3\\Lib\\site-packages\\PIL\\GifImagePlugin.py:711\u001b[0m, in \u001b[0;36m_write_local_header\u001b[1;34m(fp, im, offset, flags)\u001b[0m\n\u001b[0;32m    708\u001b[0m             transparent_color_exists \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m    710\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m im\u001b[39m.\u001b[39mencoderinfo:\n\u001b[1;32m--> 711\u001b[0m     duration \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(im\u001b[39m.\u001b[39mencoderinfo[\u001b[39m\"\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m/\u001b[39m \u001b[39m10\u001b[39m)\n\u001b[0;32m    712\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    713\u001b[0m     duration \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'tuple' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save as an animated gif\n",
     "gif = images[0]\n",
