significant changes in variables, parameters, and functions

--- a/lorenz-attractor-animate.ipynb
+++ b/lorenz-attractor-animate.ipynb
@@ -37,9 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_folder = 'images/lorenz-animate'\n",
-    "if not os.path.exists(save_folder):\n",
-    "    os.makedirs(save_folder)"
+    "save_folder1 = 'images/lorenz-animate1'\n",
+    "save_folder2 = 'images/lorenz-animate2'\n",
+    "save_folder3 = 'images/lorenz-animate3'\n",
+    "\n",
+    "if not os.path.exists(save_folder1, save_folder2, save_folder3):\n",
+    "    os.makedirs(save_folder1)\n",
+    "    os.makedirs(save_folder2)\n",
+    "    os.makedirs(save_folder3)"
    ]
   },
   {
@@ -52,9 +57,19 @@
     "initial_state = [0.1, 0, 0]\n",
     "\n",
     "# define the system parameters sigma, rho, and beta\n",
-    "sigma = 10.\n",
-    "rho   = 28.\n",
-    "beta  = 8./3.\n",
+    "sigma1 = 10.\n",
+    "rho1   = 28.\n",
+    "beta1  = 8./3.\n",
+    "\n",
+    "# define the system parameters sigma, rho, and beta\n",
+    "sigma2 = 5.\n",
+    "rho2  = 14.\n",
+    "beta2  = 4.\n",
+    "\n",
+    "# define the system parameters sigma, rho, and beta\n",
+    "sigma3 = 20.\n",
+    "rho3   = 56.\n",
+    "beta3  = 16./6.\n",
     "\n",
     "# define the time points to solve for, evenly spaced between the start and end times\n",
     "start_time = 1\n",
@@ -86,25 +101,25 @@
     "# define the lorenz system\n",
     "def lorenz_system1(current_state, t):\n",
     "    x, y, z = current_state\n",
-    "    dx_dt = sigma * (y - x)\n",
-    "    dy_dt = x * (rho - z) - y\n",
-    "    dz_dt = x * y - beta * z\n",
+    "    dx_dt = sigma1 * (y - x)\n",
+    "    dy_dt = x * (rho1 - z) - y\n",
+    "    dz_dt = x * y - beta1 * z\n",
     "    return [dx_dt, dy_dt, dz_dt]\\\n",
     "\n",
     "# define the lorenz system\n",
     "def lorenz_system2(current_state, t):\n",
     "    x, y, z = current_state\n",
-    "    dx_dt = sigma * (y - x)\n",
-    "    dy_dt = x * (rho - z) - y\n",
-    "    dz_dt = x * y - beta * z\n",
+    "    dx_dt = sigma2 * (y - x)\n",
+    "    dy_dt = x * (rho2 - z) - y\n",
+    "    dz_dt = x * y - beta2 * z\n",
     "    return [dx_dt, dy_dt, dz_dt]\n",
     "\n",
     "# define the lorenz system\n",
     "def lorenz_system3(current_state, t):\n",
     "    x, y, z = current_state\n",
-    "    dx_dt = sigma * (y - x)\n",
-    "    dy_dt = x * (rho - z) - y\n",
-    "    dz_dt = x * y - beta * z\n",
+    "    dx_dt = sigma3 * (y - x)\n",
+    "    dy_dt = x * (rho3 - z) - y\n",
+    "    dz_dt = x * y - beta3 * z\n",
     "    return [dx_dt, dy_dt, dz_dt]"
    ]
   },
@@ -115,7 +130,7 @@
    "outputs": [],
    "source": [
     "# plot the system in 3 dimensions\n",
-    "def plot_lorenz(xyz, n):\n",
+    "def plot_lorenz(xyz, n, save_folder, number=1):\n",
     "    fig = plt.figure(figsize=(12, 9))\n",
     "    ax = fig.add_subplot(projection = '3d')\n",
     "    \n",
@@ -131,7 +146,7 @@
     "    ax.set_xlim((-30, 30))\n",
     "    ax.set_ylim((-30, 30))\n",
     "    ax.set_zlim((0, 50))\n",
-    "    ax.set_title('Lorenz system attractor', fontproperties=title_font)\n",
+    "    ax.set_title(f'Lorenz system attractor {number}', fontproperties=title_font)\n",
     "    \n",
     "    ## save png of the plot\n",
     "    plt.savefig('{}/{:03d}.png'.format(save_folder, n), dpi=60, bbox_inches='tight', pad_inches=0.1)\n",
@@ -171,33 +186,19 @@
     "points1 = [odeint(lorenz_system1, initial_state, chunk) for chunk in chunks]\n",
     "# plot each set of points, one at a time, saving each plot\n",
     "for n, point in enumerate(points1):\n",
-    "    plot_lorenz(point, n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plot_lorenz(point, n, save_folder1)\n",
+    "#----------------------------------------\n",
     "# get the points to plot, one chunk of time steps at a time, by integrating the system of equations\n",
     "points2 = [odeint(lorenz_system2, initial_state, chunk) for chunk in chunks]\n",
     "# plot each set of points, one at a time, saving each plot\n",
     "for n, point in enumerate(points2):\n",
-    "    plot_lorenz(point, n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plot_lorenz(point, n, save_folder2)\n",
+    "#----------------------------------------\n",
     "# get the points to plot, one chunk of time steps at a time, by integrating the system of equations\n",
     "points3 = [odeint(lorenz_system3, initial_state, chunk) for chunk in chunks]\n",
     "# plot each set of points, one at a time, saving each plot\n",
     "for n, point in enumerate(points3):\n",
-    "    plot_lorenz(point, n)"
+    "    plot_lorenz(point, n, save_folder3)"
    ]
   },
   {
@@ -217,7 +218,13 @@
     "# create a tuple of display durations, one for each frame\n",
     "first_last = 100 #show the first and last frames for 100 ms\n",
     "standard_duration = 5 #show all other frames for 5 ms\n",
-    "durations = tuple([first_last] + [standard_duration] * (len(points) - 2) + [first_last])"
+    "\n",
+    "def durations(points): \n",
+    "    return tuple([first_last] + [standard_duration] * (len(points) - 2) + [first_last])\n",
+    "\n",
+    "durations1 = durations(points1)\n",
+    "durations2 = durations(points2)\n",
+    "durations3 = durations(points3)"
    ]
   },
   {
@@ -227,8 +234,13 @@
    "outputs": [],
    "source": [
     "# load all the static images into a list\n",
-    "images = [Image.open(image) for image in glob.glob('{}/*.png'.format(save_folder))]\n",
-    "gif_filepath = 'images/animated-lorenz-attractor.gif'"
+    "images1 = [Image.open(image) for image in glob.glob('1.{}/*.png'.format(save_folder1))]\n",
+    "images2 = [Image.open(image) for image in glob.glob('2.{}/*.png'.format(save_folder2))]\n",
+    "images3 = [Image.open(image) for image in glob.glob('3.{}/*.png'.format(save_folder3))]\n",
+    "\n",
+    "gif_filepath1 = 'images/animated-lorenz-attractor1.gif'\n",
+    "gif_filepath2 = 'images/animated-lorenz-attractor2.gif'\n",
+    "gif_filepath3 = 'images/animated-lorenz-attractor3.gif'"
    ]
   },
   {
@@ -238,10 +250,22 @@
    "outputs": [],
    "source": [
     "# save as an animated gif\n",
-    "gif = images[0]\n",
-    "gif.info['duration'] = durations #ms per frame\n",
-    "gif.info['loop'] = 0 #how many times to loop (0=infinite)\n",
-    "gif.save(fp=gif_filepath, format='gif', save_all=True, append_images=images[1:])"
+    "gif1 = images1[0]\n",
+    "gif1.info['duration'] = durations1 #ms per frame\n",
+    "gif1.info['loop'] = 0 #how many times to loop (0=infinite)\n",
+    "gif1.save(fp=gif_filepath1, format='gif', save_all=True, append_images=images1[1:])\n",
+    "#----------------------------------------\n",
+    "# save as an animated gif\n",
+    "gif2 = images2[0]\n",
+    "gif2.info['duration'] = durations2 #ms per frame\n",
+    "gif2.info['loop'] = 0 #how many times to loop (0=infinite)\n",
+    "gif2.save(fp=gif_filepath2, format='gif', save_all=True, append_images=images2[1:])\n",
+    "#----------------------------------------\n",
+    "# save as an animated gif\n",
+    "gif3 = images3[0]\n",
+    "gif3.info['duration'] = durations3 #ms per frame\n",
+    "gif3.info['loop'] = 0 #how many times to loop (0=infinite)\n",
+    "gif3.save(fp=gif_filepath3, format='gif', save_all=True, append_images=images3[1:])"
    ]
   },
   {
@@ -251,7 +275,9 @@
    "outputs": [],
    "source": [
     "# verify that the number of frames in the gif equals the number of image files and durations\n",
-    "Image.open(gif_filepath).n_frames == len(images) == len(durations)"
+    "Image.open(gif_filepath1).n_frames == len(images1) == len(durations1)\n",
+    "Image.open(gif_filepath2).n_frames == len(images2) == len(durations2)\n",
+    "Image.open(gif_filepath3).n_frames == len(images3) == len(durations3)"
    ]
   },
   {
@@ -260,7 +286,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IPdisplay.Image(url=gif_filepath)"
+    "IPdisplay.Image(url=gif_filepath1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IPdisplay.Image(url=gif_filepath2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IPdisplay.Image(url=gif_filepath3)"
    ]
   }
  ],
