change in folder and minor changes

--- a/lorenz-attractor-visualizer.ipynb
+++ b/lorenz-attractor-visualizer.ipynb
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_folder1 = 'images/lorenz-animate1'\n",
-    "save_folder2 = 'images/lorenz-animate2'\n",
-    "save_folder3 = 'images/lorenz-animate3'\n",
+    "save_folder1 = 'results/lorenz-animate1'\n",
+    "save_folder2 = 'results/lorenz-animate2'\n",
+    "save_folder3 = 'results/lorenz-animate3'\n",
     "\n",
     "if not os.path.exists(save_folder1):\n",
     "    os.makedirs(save_folder1)\n",
@@ -116,18 +116,19 @@
     "# returns an array of x, y, and z value arrays for each time point, with the initial values in the first row\n",
     "\n",
     "xyz1 = odeint(lorenz_system1, initial_state, time_points)\n",
-    "xyz2 = odeint(lorenz_system2, initial_state, time_points)\n",
-    "xyz3 = odeint(lorenz_system3, initial_state, time_points)\n",
-    "\n",
     "# extract the individual arrays of x, y, and z values from the array of arrays\n",
     "x1 = xyz1[:, 0]\n",
     "y1 = xyz1[:, 1]\n",
     "z1 = xyz1[:, 2]\n",
     "\n",
+    "xyz2 = odeint(lorenz_system2, initial_state, time_points)\n",
+    "# extract the individual arrays of x, y, and z values from the array of arrays\n",
     "x2 = xyz2[:, 0]\n",
     "y2 = xyz2[:, 1]\n",
     "z2 = xyz2[:, 2]\n",
     "\n",
+    "xyz3 = odeint(lorenz_system3, initial_state, time_points)\n",
+    "# extract the individual arrays of x, y, and z values from the array of arrays\n",
     "x3 = xyz3[:, 0]\n",
     "y3 = xyz3[:, 1]\n",
     "z3 = xyz3[:, 2]"
