--- a/lorenz-attractor-animate.ipynb
+++ b/lorenz-attractor-animate.ipynb
@@ -86,9 +86,9 @@
    "source": [
     "The Lorenz System:\n",
     "$$\n",
-    "\\frac{{dx}}{{dt}} = \\sigma(y - x) \\\\\n",
-    "\\frac{{dy}}{{dt}} = x(\\rho - z) - y \\\\\n",
-    "\\frac{{dz}}{{dt}} = xy - \\beta z, \\\\\n",
+    "\\frac{{dx}}{{dt}} = \\sigma(y - x) \\ \n",
+    "\\frac{{dy}}{{dt}} = x(\\rho - z) - y \\ \n",
+    "\\frac{{dz}}{{dt}} = xy - \\beta z, \\ \n",
     "$$\n",
     "where x is proportional to the rate of convection, y to the horizontal temperature variation, and z to the vertical temperature variation. The constants σ, ρ, and β are system parameters proportional to the Prandtl number, Rayleigh number, and certain physical dimensions of the layer itself."
    ]
